Added smoke and regression testng xml files

--- a/SAIN_Inventory/test-output/emailable-report.html
+++ b/SAIN_Inventory/test-output/emailable-report.html
@@ -9,14 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test_chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47,403</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test-edge</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47,825</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">95,228</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">98,850</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test_chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pointOfSaleTest.SubmitProductsTest</td><td><a href="#m0">submitProductsTest</a></td><td rowspan="1">1732597533560</td><td rowspan="1">20433</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test-edge &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.pointOfSaleTest.SubmitProductsTest</td><td><a href="#m1">submitProductsTest</a></td><td rowspan="1">1732597532622</td><td rowspan="1">23765</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.accountsTest.AddUserAccountTest</td><td><a href="#m0">addUserAccount</a></td><td rowspan="1">1732600138358</td><td rowspan="1">7382</td></tr><tr class="passedodd"><td rowspan="1">com.employeeTest.EditEmployeeTest</td><td><a href="#m1">editEmployeeContact</a></td><td rowspan="1">1732600187563</td><td rowspan="1">7438</td></tr><tr class="passedeven"><td rowspan="1">com.inventoryTest.SearchProductTest</td><td><a href="#m2">searchProductByCode</a></td><td rowspan="1">1732600107261</td><td rowspan="1">2694</td></tr><tr class="passedodd"><td rowspan="1">com.pointOfSaleTest.SubmitProductsTest</td><td><a href="#m3">submitProductsTest</a></td><td rowspan="1">1732600119372</td><td rowspan="1">7863</td></tr><tr class="passedeven"><td rowspan="2">com.productTest.AddProductTest</td><td><a href="#m4">addProductAndVerifyInEditTest</a></td><td rowspan="1">1732600155665</td><td rowspan="1">10398</td></tr><tr class="passedeven"><td><a href="#m5">addProductTest</a></td><td rowspan="1">1732600170102</td><td rowspan="1">8811</td></tr></tbody>
 </table>
-<h2>Test_chrome</h2><h3 id="m0">com.pointOfSaleTest.SubmitProductsTest#submitProductsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test-edge</h2><h3 id="m1">com.pointOfSaleTest.SubmitProductsTest#submitProductsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.accountsTest.AddUserAccountTest#addUserAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.employeeTest.EditEmployeeTest#editEmployeeContact</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.inventoryTest.SearchProductTest#searchProductByCode</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.pointOfSaleTest.SubmitProductsTest#submitProductsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.productTest.AddProductTest#addProductAndVerifyInEditTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.productTest.AddProductTest#addProductTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
