--- a/SAIN_Inventory/test-output/old/Suite/groups.html
+++ b/SAIN_Inventory/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegressionTest</td><td>SearchProductTest.searchProductByCode()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]<br/>AddUserAccountTest.addUserAccount()[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]<br/></td></tr>
+<tr><td>SmokeTest</td><td>SearchProductTest.searchProductByCode()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]<br/>AddUserAccountTest.addUserAccount()[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]<br/></td></tr>
+</table>
