--- a/SAIN_Inventory/test-output/old/Suite/reporter-output.html
+++ b/SAIN_Inventory/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,26 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>report configuration</td></tr>
+<tr><td>---Connected to Database---</td></tr>
+<tr><td>---Chrome Browser Launched---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Browser Closed---</td></tr>
+<tr><td>---Chrome Browser Launched---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Browser Closed---</td></tr>
+<tr><td>---Chrome Browser Launched---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Browser Closed---</td></tr>
+<tr><td>---Chrome Browser Launched---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Browser Closed---</td></tr>
+<tr><td>---Chrome Browser Launched---</td></tr>
+<tr><td>---Logged-in to App---</td></tr>
+<tr><td>---Logged-out from App---</td></tr>
+<tr><td>---Browser Closed---</td></tr>
+<tr><td>---Closed Database Connection---</td></tr>
+</table>
