--- a/SAIN_Inventory/test-output/old/Suite/methods.html
+++ b/SAIN_Inventory/test-output/old/Suite/methods.html
@@ -1,28 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@4c371370]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2030796876</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:23</td>   <td>-30161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@4c371370]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2030796876</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>24/11/26 10:35:33</td>   <td>-20447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitProductsTest.submitProductsTest()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@4c371370]">submitProductsTest</td> 
-  <td>TestNG-tests-1@2030796876</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:12</td>   <td>-41659</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@4c371370]">&gt;&gt;configBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2030796876</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:55</td>   <td>1804</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@4c371370]">&lt;&lt;configAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2030796876</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:36:00</td>   <td>6124</td> <td title="&lt;&lt;BaseClass.configAfterSuite()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&lt;&lt;configAfterSuite</td> 
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:16</td>   <td>0</td> <td title="&gt;&gt;BaseClass.configBeforeSuite()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&gt;&gt;configBeforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:10</td>   <td>-43045</td> <td title="&gt;&gt;BaseClass.configBeforeSuite()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&gt;&gt;configBeforeSuite</td> 
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:29</td>   <td>13306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:08</td>   <td>51819</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.productTest.AddProductTest@692f203f]">&gt;&gt;configBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:05</td>   <td>49091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7fd8ce">  <td>24/11/26 11:19:15</td>   <td>59016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductTest.addProductAndVerifyInEditTest()[pri:0, instance:com.productTest.AddProductTest@692f203f]">addProductAndVerifyInEditTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="93938a">  <td>24/11/26 11:18:58</td>   <td>41709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddUserAccountTest.addUserAccount()[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]">addUserAccount</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>24/11/26 11:19:47</td>   <td>90914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditEmployeeTest.editEmployeeContact()[pri:0, instance:com.employeeTest.EditEmployeeTest@48f2bd5b]">editEmployeeContact</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7fd8ce">  <td>24/11/26 11:19:30</td>   <td>73453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductTest.addProductTest()[pri:0, instance:com.productTest.AddProductTest@692f203f]">addProductTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:26</td>   <td>70303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.productTest.AddProductTest@692f203f]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:53</td>   <td>37205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>24/11/26 11:18:27</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.searchProductByCode()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">searchProductByCode</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:32</td>   <td>15445</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@368f2016]">&gt;&gt;configBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:50</td>   <td>34319</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]">&gt;&gt;configBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:35</td>   <td>18362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@368f2016]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:56</td>   <td>99430</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.employeeTest.EditEmployeeTest@48f2bd5b]">&lt;&lt;configAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:47</td>   <td>30605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@368f2016]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:38</td>   <td>82272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.productTest.AddProductTest@692f203f]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:48</td>   <td>31742</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@368f2016]">&lt;&lt;configAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:40</td>   <td>83771</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.employeeTest.EditEmployeeTest@48f2bd5b]">&gt;&gt;configBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:56</td>   <td>100114</td> <td title="&lt;&lt;BaseClass.configAfterSuite()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&lt;&lt;configAfterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>24/11/26 10:35:32</td>   <td>-21385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitProductsTest.submitProductsTest()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">submitProductsTest</td> 
-  <td>TestNG-tests-2@1120420567</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:56</td>   <td>2380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&lt;&lt;configAfterMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1120420567</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:57</td>   <td>3903</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&lt;&lt;configAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1120420567</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:18</td>   <td>-35092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&gt;&gt;configBeforeMethod</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1120420567</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>24/11/26 10:35:12</td>   <td>-41659</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@62379589]">&gt;&gt;configBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1120420567</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:43</td>   <td>86381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.employeeTest.EditEmployeeTest@48f2bd5b]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:07</td>   <td>51036</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.accountsTest.AddUserAccountTest@4c583ecf]">&lt;&lt;configAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>24/11/26 11:18:39</td>   <td>22723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitProductsTest.submitProductsTest()[pri:0, instance:com.pointOfSaleTest.SubmitProductsTest@368f2016]">submitProductsTest</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:39</td>   <td>83061</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.productTest.AddProductTest@692f203f]">&lt;&lt;configAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:31</td>   <td>14790</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterClass()[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&lt;&lt;configAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:17</td>   <td>1272</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeClass(java.lang.String)[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&gt;&gt;configBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:55</td>   <td>98352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.employeeTest.EditEmployeeTest@48f2bd5b]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:26</td>   <td>70303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.productTest.AddProductTest@692f203f]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:19:38</td>   <td>82272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAfterMethod()[pri:0, instance:com.productTest.AddProductTest@692f203f]">&lt;&lt;configAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="8d7062">  <td>24/11/26 11:18:22</td>   <td>6268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBeforeMethod(java.lang.String,java.lang.String)[pri:0, instance:com.inventoryTest.SearchProductTest@34a3d150]">&gt;&gt;configBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
